--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
     <div class="page">
       <main class="content">
         <section class="logo" id="logo">
-          <img class="logo__image" src="./images/logo.png">
+          <img class="logo__image" src="./images/logo.png" alt="Logo">
         </section>
         <section class="lead" id="lead">
           <h1 class="lead__title">De patria a patria</h1>
           <p class="lead__subtitle">Un viaje épico de Kentucky a Burundi pasando por Gales y Ucrania</p>
-          <img class="lead__image" src="./images/kalegin-michail-179870-unsplash.png"/>
+          <img class="lead__image" src="./images/kalegin-michail-179870-unsplash.png" alt="Kalegin michail"/>
         </section>
         <section class="intro" id="intro">
           <h2 class="intro__title">Conoce un poco mejor los lugares de los que proceden tus colegas en línea</h2>
