--- a/index.html
+++ b/index.html
@@ -12,30 +12,55 @@
 
     <link rel="shortcut icon" href="./favicon.ico" />
     <link rel="stylesheet" href="./pages/index.css" />
-
   </head>
 
   <body>
     <div class="page">
-      <main class="content">
+      <header class="header">
         <section class="logo" id="logo">
-          <img class="logo__image" src="./images/logo.png" alt="Logo">
+          <img class="logo__image" src="./images/logo.png" alt="Logo" />
         </section>
+      </header>
+      <main>
         <section class="lead" id="lead">
           <h1 class="lead__title">De patria a patria</h1>
-          <p class="lead__subtitle">Un viaje épico de Kentucky a Burundi pasando por Gales y Ucrania</p>
-          <img class="lead__image" src="./images/kalegin-michail-179870-unsplash.png" alt="Kalegin michail"/>
+          <p class="lead__subtitle">
+            Un viaje épico de Kentucky a Burundi pasando por Gales y Ucrania
+          </p>
+          <img
+            class="lead__image"
+            src="./images/kalegin-michail-179870-unsplash.png"
+            alt="Kalegin michail"
+          />
         </section>
         <section class="intro" id="intro">
-          <h2 class="intro__title">Conoce un poco mejor los lugares de los que proceden tus colegas en línea</h2>
-          <p class="intro__paragraph-one">Todo ser humano es un artista, un ser de la libertad, llamado a participar en la transformación y reforma de las condiciones, el pensamiento y las estructuras que conforman e influyen en nuestras vidas.</p>
+          <h2 class="intro__title">
+            Conoce un poco mejor los lugares de los que proceden tus colegas en
+            línea
+          </h2>
+          <p class="intro__paragraph-one">
+            Todo ser humano es un artista, un ser de la libertad, llamado a
+            participar en la transformación y reforma de las condiciones, el
+            pensamiento y las estructuras que conforman e influyen en nuestras
+            vidas.
+          </p>
           <p class="intro__paragraph-one-author">— Joseph Beuys</p>
-          <p class="intro__paragraph-two">La ciudad de TripleTen ha reunido a profesionales de diferentes rincones del mundo. Hoy, la Galería de Arte TripleTen se enorgullece de presentar historias y fotografías de algunas de las personas que dedican su tiempo y esfuerzo a hacer que los futuros profesionales de la tecnología de esta ciudad se sientan como en casa. Cada uno de nosotros tiene una historia única sobre el lugar del que procede. No dudes en añadir a nuestra colección tu propia historia y una obra de arte visual dedicada a tu ciudad natal. No importa de dónde seas, nos alegra que seas nuestro vecino.</p>
+          <p class="intro__paragraph-two">
+            La ciudad de TripleTen ha reunido a profesionales de diferentes
+            rincones del mundo. Hoy, la Galería de Arte TripleTen se enorgullece
+            de presentar historias y fotografías de algunas de las personas que
+            dedican su tiempo y esfuerzo a hacer que los futuros profesionales
+            de la tecnología de esta ciudad se sientan como en casa. Cada uno de
+            nosotros tiene una historia única sobre el lugar del que procede. No
+            dudes en añadir a nuestra colección tu propia historia y una obra de
+            arte visual dedicada a tu ciudad natal. No importa de dónde seas,
+            nos alegra que seas nuestro vecino.
+          </p>
         </section>
-        <footer class="footer" id="footer">
-          <p class="footer__text">© 2024. Introduce tu nombre</p>
-        </footer>
-    </main>
+      </main>
+      <footer class="footer" id="footer">
+        <p class="footer__text">© 2024. Introduce tu nombre</p>
+      </footer>
     </div>
   </body>
 </html>
