--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="title" content="De patria a patria" />
     <meta name="description" content="Proyecto web sprint 5" />
     <meta name="keywords" content="patria" />
-    <meta name="author" content="ppc" />
+    <meta name="author" content="Patricia Páez" />
 
     <title>De patria a patria</title>
 
@@ -59,7 +59,7 @@
         </section>
       </main>
       <footer class="footer" id="footer">
-        <p class="footer__text">© 2024. Introduce tu nombre</p>
+        <p class="footer__text">© 2025. Patricia Páez Cárdenas</p>
       </footer>
     </div>
   </body>
