--- a/index.html
+++ b/index.html
@@ -57,6 +57,215 @@
             nos alegra que seas nuestro vecino.
           </p>
         </section>
+        <section class="photo-grid" id="photo-grid">
+          <div class="photo-grid__gallery">
+            <img
+              class="photo-grid__item-one"
+              src="./images/item_1.jpg"
+              alt="place one"
+            />
+            <img
+              class="photo-grid__item-two"
+              src="./images/item_2.jpg"
+              alt="place two"
+            />
+            <img
+              class="photo-grid__item-three"
+              src="./images/item_3.jpg"
+              alt="place three"
+            />
+            <img
+              class="photo-grid__item-four"
+              src="./images/item_4.jpg"
+              alt="place four"
+            />
+            <img
+              class="photo-grid__item-five"
+              src="./images/item_5.jpg"
+              alt="place five"
+            />
+            <img
+              class="photo-grid__item-six"
+              src="./images/item_6.jpg"
+              alt="place six"
+            />
+            <img
+              class="photo-grid__item-seven"
+              src="./images/item_7.jpg"
+              alt="place seven"
+            />
+            <img
+              class="photo-grid__item-eight"
+              src="./images/item_8.jpg"
+              alt="place eight"
+            />
+          </div>
+        </section>
+        <section class="places" id="places">
+          <div class="place">
+            <h1 class="place__title">Cricieth, Gales</h1>
+            <div class="place__artist-info">
+              <p class="place__artist-title">ARTISTAS</p>
+              <p class="place__artist-author">Steffan Warren, editor jefe</p>
+              <p class="place__artist-author">
+                Kseniya Glagoleva, gerente de proyectos
+              </p>
+            </div>
+            <img
+              class="place__image"
+              src="./images/cricieth_gales.jpg"
+              alt="Cricieth Gales"
+            />
+            <div class="place__text">
+              <p class="place__paragraph">
+                Las ruinas medievales del castillo de Cricieth dominan la ciudad
+                desde una roca que extiende sobre el mar. Se cree que fue
+                construido por Llewelyn el Grande en el S. XIII. 800 años
+                después, la autodenominada Perla de Gales en las costas de
+                Snowdonia, se ha convertido en un popular destino turístico
+                durante los meses de verano.
+              </p>
+              <p class="place__paragraph">
+                A pocos pasos de camino al castillo, puedes disfrutar de los
+                mejores helados del mundo en Cadwalader's, cuyo ingrediente
+                secreto se rumorea que son algas marinas de la localidad. Otra
+                cosa por la que es famosa Cricieth es por haber ganado el premio
+                *Gales en flor* durante cinco años seguidos por sus
+                espectaculares muestras florales alrededor de la ciudad. También
+                vio nacer a David Lloyd George, el único galés que ha sido
+                Primer Ministro del Reino Unido.
+              </p>
+            </div>
+            <div class="place__purchase-link">
+              <a class="place__purchase-link-text" href=""
+                >Compra esta obra como NFT</a
+              >
+            </div>
+          </div>
+          <div class="place">
+            <h1 class="place__title">Berea, EE. UU.</h1>
+            <div class="place__artist-info">
+              <p class="place__artist-title">ARTISTA</p>
+              <p class="place__artist-author">Travis Turner, autor y editor</p>
+            </div>
+            <img
+              class="place__image"
+              src="./images/cricieth_gales.jpg"
+              alt="Cricieth Gales"
+            />
+            <div class="place__text">
+              <p class="place__paragraph">
+                Berea es una pequeña ciudad ubicada en la parte central de
+                Kentucky. La ciudad está rodeada por hermosos bosques y campos.
+                Es conocida como la capital de la artesanía del estado, y sus
+                visitantes hallarán infinitas posibilidades para ir de compras:
+                tiendas de joyas, velas y artículos de madera artesanales;
+                galerías, talleres de vidrio y más. La ciudad celebra un
+                festival anual que rinde tributo al "spoonbread", un platillo
+                local hecho de pan de maíz y que se sirve con una cuchara de
+                madera.
+              </p>
+              <p class="place__paragraph">
+                Aunque, probablemente es mejor conocida por su universidad. El
+                Berea College fue fundado en 1855 y fue la primera universidad
+                sureña integrada racialmente, así como la primera en ser
+                coeducacional. Algo que en cierta manera la hace única, es que
+                no cobra colegiatura: cada estudiante recibe una beca del 100%.
+              </p>
+            </div>
+            <div class="place__purchase-link">
+              <a class="place__purchase-link-text" href=""
+                >Compra esta obra como NFT</a
+              >
+            </div>
+          </div>
+          <div class="place">
+            <h1 class="place__title">Muramvya, Burundi</h1>
+            <div class="place__artist-info">
+              <p class="place__artist-title">ARTISTA</p>
+              <p class="place__artist-author">
+                Grevisse Kenguruka, editor técnico
+              </p>
+            </div>
+            <img
+              class="place__image"
+              src="./images/cricieth_gales.jpg"
+              alt="Cricieth Gales"
+            />
+            <div class="place__text">
+              <p class="place__paragraph">
+                Muramvya es una de las 18 provincias de Burundi. Durante la
+                época del reino, Muramvya fue su capital; y en 2017, gracias a
+                su paisaje cultural y natural, se añadió a la Lista provisional
+                de patrimonio mundial de la UNESCO. Se encuentra ubicada en el
+                centro de Burundi, entre las capitales política y económica del
+                país.
+              </p>
+              <p class="place__paragraph">
+                Su clima es más bien frío durante la noche, pero durante el día,
+                podrías pensar que estás en el paraíso. A sus 2,665 metros
+                (8,743 ft) sobre el nivel del mar, el Monte Teza es uno de los
+                lugares más fríos de la provincia. Pero es justo esa brisa
+                fresca la que da pie a una de las más grandes plantaciones de té
+                y café del país, y que representa la mayoría de las
+                exportaciones de Burundi.
+              </p>
+              <p class="place__paragraph">
+                El Parque nacional de Kibira, una de las mayores reservas de
+                vida silvestre para los simios, ocupa parte de cuatro
+                provincias, incluyendo Muramvya. Este parque nacional se
+                encuentra en las cúspides de las hermosas montañas de la
+                Divisoria Congo-Nilo, cuyas alturas oscilan entre 1,550 y 2,660
+                metros. Está lleno de hermosa vegetación, y es una fuente para
+                los diversos ríos y arroyos que proporcionan agua alrededor del
+                país.
+              </p>
+            </div>
+            <div class="place__purchase-link">
+              <a class="place__purchase-link-text" href=""
+                >Compra esta obra como NFT</a
+              >
+            </div>
+          </div>
+          <div class="place">
+            <h1 class="place__title">Bogotá, Colombia</h1>
+            <div class="place__artist-info">
+              <p class="place__artist-title">ARTISTA</p>
+              <p class="place__artist-author">Anónimo</p>
+            </div>
+            <img
+              class="place__image"
+              src="./images/bogota_colombia.jpeg"
+              alt="Bogotá"
+            />
+            <div class="place__text">
+              <p class="place__paragraph">
+                Bogotá, capital y ciudad más grande de Colombia, es un punto de
+                encuentro de personas de todo el país, lo que la convierte en
+                una urbe diversa y multicultural donde se mezclan la tradición y
+                la modernidad.
+              </p>
+              <p class="place__paragraph">
+                Ubicada en el centro del territorio colombiano, sobre la sabana
+                que lleva su nombre y en el altiplano cundiboyacense, Bogotá
+                goza de una posición privilegiada rodeada de vegetación y
+                paisajes verdes únicos en el continente.
+              </p>
+              <p class="place__paragraph">
+                La ciudad destaca por sus parques y por los cerros orientales,
+                donde se encuentran los santuarios de Monserrate y Guadalupe.
+                Pocas metrópolis pueden disfrutar a diario de un entorno natural
+                tan impresionante, enmarcado por las montañas de la Cordillera
+                de los Andes.
+              </p>
+            </div>
+            <div class="place__purchase-link">
+              <a class="place__purchase-link-text" href=""
+                >Compra esta obra como NFT</a
+              >
+            </div>
+          </div>
+        </section>
       </main>
       <footer class="footer" id="footer">
         <p class="footer__text">© 2025. Patricia Páez Cárdenas</p>
