adding media queries

--- a/index.html
+++ b/index.html
@@ -60,42 +60,42 @@
         <section class="photo-grid" id="photo-grid">
           <div class="photo-grid__gallery">
             <img
-              class="photo-grid__item-one"
+              class="photo-grid__item"
               src="./images/item_1.jpg"
               alt="place one"
             />
             <img
-              class="photo-grid__item-two"
+              class="photo-grid__item"
               src="./images/item_2.jpg"
               alt="place two"
             />
             <img
-              class="photo-grid__item-three"
+              class="photo-grid__item"
               src="./images/item_3.jpg"
               alt="place three"
             />
             <img
-              class="photo-grid__item-four"
+              class="photo-grid__item"
               src="./images/item_4.jpg"
               alt="place four"
             />
             <img
-              class="photo-grid__item-five"
+              class="photo-grid__item"
               src="./images/item_5.jpg"
               alt="place five"
             />
             <img
-              class="photo-grid__item-six"
+              class="photo-grid__item"
               src="./images/item_6.jpg"
               alt="place six"
             />
             <img
-              class="photo-grid__item-seven"
+              class="photo-grid__item"
               src="./images/item_7.jpg"
               alt="place seven"
             />
             <img
-              class="photo-grid__item-eight"
+              class="photo-grid__item"
               src="./images/item_8.jpg"
               alt="place eight"
             />
@@ -231,7 +231,7 @@
             <h1 class="place__title">Bogotá, Colombia</h1>
             <div class="place__artist-info">
               <p class="place__artist-title">ARTISTA</p>
-              <p class="place__artist-author">Anónimo</p>
+              <p class="place__artist-author">Patricia Páez</p>
             </div>
             <img
               class="place__image"
