--- a/index.html
+++ b/index.html
@@ -150,8 +150,8 @@
             </div>
             <img
               class="place__image"
-              src="./images/cricieth_gales.jpg"
-              alt="Cricieth Gales"
+              src="./images/berea_eeuu.jpg"
+              alt="Berea eeuu"
             />
             <div class="place__text">
               <p class="place__paragraph">
@@ -189,8 +189,8 @@
             </div>
             <img
               class="place__image"
-              src="./images/cricieth_gales.jpg"
-              alt="Cricieth Gales"
+              src="./images/muramvya_burundi.jpg"
+              alt="Muramvya Burundi"
             />
             <div class="place__text">
               <p class="place__paragraph">
